Fix canvas overflow bug, add gif, update instructions

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,6 +9,9 @@ h1 {
     font-size: 32px; 
     font-weight: normal; 
 }
+h2 { 
+    font-weight: normal; 
+}
 h3 { 
     font-weight: normal; 
 }
